--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,18 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# MacOS icon files
+.DS_Store
+
+# Eclipse files
+.project
+.classpath
+.settings/
+bin/
+
+# Maven target dir
+target/
+
+# Vagrant dir
+.vagrant/
