Add dependencies: Smack, WindowLicker

--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,21 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.igniterealtime.smack</groupId>
+			<artifactId>smack-core</artifactId>
+			<version>4.1.4</version>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.googlecode.windowlicker</groupId>
+			<artifactId>windowlicker-swing</artifactId>
+			<version>r268</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
