Use smack major version 3

--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.igniterealtime.smack</groupId>
-			<artifactId>smack-core</artifactId>
-			<version>4.1.4</version>
+			<groupId>jivesoftware</groupId>
+			<artifactId>smack</artifactId>
+			<version>3.1.0</version>
 		</dependency>
 
 		<dependency>
