--- a/environment/main.yml
+++ b/environment/main.yml
@@ -3,12 +3,18 @@
   sudo: yes
   
   tasks:
-    - name: Install 'prosody'
+    - name: install 'prosody'
       apt: name=prosody state=present
   
-    - name: Register users
+    - name: register users
       shell: prosodyctl register {{ item.name }} localhost {{ item.password }}
       with_items:
         - { name: 'sniper',               password: 'sniper' }
         - { name: 'auction-item-54321',   password: 'auction' }
         - { name: 'auction-item-65432',   password: 'auction' }
+      
+    - name: set resource policy 'Never kick'
+      lineinfile: dest=/etc/prosody/conf.d/localhost.cfg.lua line='conflict_resolve = "kick_new";'
+      
+    - name: restart 'prosody'
+      service: name=prosody state=restarted
