--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,19 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<smack.version>3.1.0</smack.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>jivesoftware</groupId>
 			<artifactId>smack</artifactId>
-			<version>3.1.0</version>
+			<version>${smack.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>jivesoftware</groupId>
+			<artifactId>smackx</artifactId>
+			<version>${smack.version}</version>
 		</dependency>
 
 		<dependency>
