--- a/pom.xml
+++ b/pom.xml
@@ -13,17 +13,17 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<smack.version>3.1.0</smack.version>
+		<smack.version>3.2.1</smack.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
-			<groupId>jivesoftware</groupId>
+			<groupId>org.igniterealtime.smack</groupId>
 			<artifactId>smack</artifactId>
 			<version>${smack.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>jivesoftware</groupId>
+			<groupId>org.igniterealtime.smack</groupId>
 			<artifactId>smackx</artifactId>
 			<version>${smack.version}</version>
 		</dependency>
