New plugin: exec

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,41 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.4.0</version>
+				<executions>
+					<execution>
+						<id>vagrant-up</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>vagrant</executable>
+							<arguments>
+								<argument>up</argument>
+							</arguments>
+						</configuration>
+					</execution>
+					<execution>
+						<id>vagrant-destroy</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>vagrant</executable>
+							<arguments>
+								<argument>destroy</argument>
+								<argument>--force</argument>
+							</arguments>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 </project>
