--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<smack.version>3.2.1</smack.version>
+		<jmock.version>2.8.1</jmock.version>
 	</properties>
 
 	<dependencies>
@@ -38,6 +39,18 @@
 			<groupId>com.googlecode.windowlicker</groupId>
 			<artifactId>windowlicker-swing</artifactId>
 			<version>r268</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jmock</groupId>
+			<artifactId>jmock</artifactId>
+			<version>${jmock.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jmock</groupId>
+			<artifactId>jmock-junit4</artifactId>
+			<version>${jmock.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
