--- a/environment/development.yml
+++ b/environment/development.yml
@@ -25,3 +25,6 @@
       
     - name: restart 'prosody'
       service: name=prosody state=restarted
+
+    - name: wait for 'prosody' restart to complete
+      wait_for: path=/var/run/prosody/prosody.pid state=present
